[tool.poetry]
name = "pyproject"
version = "0.1.0"
description = ""
authors = ["Romanuk Vlad <romanuk_vlad@ukr.net>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.0"
sqlalchemy = "^1.2"
psycopg2 = "^2.7"
flask-restful = "^0.3.7"
flask-marshmallow = "^0.9.0"
marshmallow = "^2.18"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
